--- a/signals/src/app/containers/movies/movies.component.html
+++ b/signals/src/app/containers/movies/movies.component.html
@@ -16,7 +16,7 @@
 </mat-card>
 <div class="flex">
   <ng-container  *ngFor="let movie of movies$ | async">
-    <app-movie [movie]="movie"/>
+    <app-movie [movie]="movie"></app-movie>
   </ng-container>
 </div>
 
